# store-item-demand-forecasting

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
deployment/: app-docker-build.sh  app-docker-run.sh  model-docker-build.sh  model-docker-run.sh
docs/postman/: Store Item Demand Forecasting.postman_collection.json
notebooks/: light-gbm-demand-forecasting.ipynb
src/: main.py
src/provider/: met_provider.py  mlflow_provider.py
src/service/: forecast_service.py  search_service.py
src/shared/: data_model_base.py
src/shared/config/: config.yaml  config_loader.py
src/shared/dto/: forecast_result.py  search_result.py
src/shared/view/: met_view.py  mlflow_view.py  request_view.py  response_view.py
tests/unit/: test_forecast_service.py
