[project]
name = "store-item-demand-forecasting"
version = "0.1.0"
description = "Forecasting store item demand."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "lightgbm>=4.6.0",
    "mlflow>=2.21.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydantic-settings>=2.7.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "jupyter>=1.1.1",
    "virtualenv>=20.29.3",
]
